--- a/public/views/orgLeague.ejs
+++ b/public/views/orgLeague.ejs
@@ -137,6 +137,16 @@
                                     <li class=""><a href="/orgTourney">Organize Tourney</a></li>
                                 </ul>
                             </li>
+                            <li style="padding-left: 12rem;"></li>
+                            <li class="">
+                                <a href="/leaderboard">Leaderboard </a>
+                            </li>
+                            <li class="">
+                                <a href="/admin">Admin</a>
+                            </li>
+                            <li class="">   
+                                <a href="/v2_admin">Admin-Graph</a>
+                            </li>
 
                         </ul>
                     </nav>
